--- a/index.html
+++ b/index.html
@@ -7,46 +7,47 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div>
-      <h1> Ashlen Goff</h1>
-      <p>self motivated, creative individual with a passion for bridging people and technology.
-    </div>
-  
-    <div class="exp-header">
-      <h3>Professional Experience</h3>
-    </div>  
-  
-    <div>
-      <h4>Prime Digital Academy</4>
-      <h5>Head of Campus Development, Lead Instructor</h5>
-      <h6>Dec 2018 - Current | Oct 2014 - Oct 2017</h6>
-      
-      <ul>
-        <li>Awesome info here!</li>
-        <li>Awesome info here!</li>
-        <li>Awesome info here!</li>
-      </ul>
-    </div>
+  <div>
+    <h1>Ashlen Goff</h1>
+    <p>Motivated, hard working, passion for quality, attentive to detail &amp; continually improving
+  </div>
+
+  <div class="exp-header">
+    <h2>Professional Experience</h2>
+  </div>  
+
+  <div>
+    <h3>Boston Scientific</h3>
+    <h4>Packaging &amp; Shipping Department</h4>
+    <h5>Aug 2021 - Dec 2021</h5>
+
+    <ul>
+      <li>Ensured high quality &amp; rapid assembly of medical device packaging</li>
+      <li>Scanned &amp; updated logistics software for inventory management &amp; tracking</li>
+      <li>Consistently exceeded performance goals</li>
+    </ul>
+  </div>
   
   <div>
-      <h4>Prime Digital Academy</4>
-      <h5>Head of Campus Development, Lead Instructor</h5>
-      <h6>Dec 2018 - Current | Oct 2014 - Oct 2017</h6>
-      
-      <ul>
-        <li>Awesome info here!</li>
-        <li>Awesome info here!</li>
-        <li>Awesome info here!</li>
-      </ul>
-    </div>
+    <h3>Caribou Coffee</h3>
+    <h4>Shift Lead</h4>
+    <h5>Aug 2019 - Feb 2021</h5>
+
+    <ul>
+      <li>Trained new hires on procedures</li>
+      <li>Mentored existing staff to improve performance &amp; quality</li>
+      <li>Managed opening &amp; closing the store</li>
+      <li>Counted out tills, divided tips &amp; prepped bank deposits</li>
+    </ul>
+  </div>
   
   <div class="exp-header">
-      <h3>Education</h3>
-    </div>  
+    <h2>Education</h2>
+  </div>  
   
   <div>
-    <h5>Bachelor of science</h5>
-    <h6>Brown College, Minneapolis, MN- Completed 2011</h6>
+    <h3>High School Diploma</h3>
+    <h4>Minneapolis Public Schools Online, MN - Completed 2022</h4>
   </div>
 </body>
 </html>
