added skills and drybar experience

--- a/index.html
+++ b/index.html
@@ -10,12 +10,35 @@
   <div>
     <h1>Ashlen Goff</h1>
     <p>Motivated, hard working, passion for quality, attentive to detail &amp; continually improving
+    <p>Bootstrap, Git, HTML/CSS, image optimization, Javascript, jQuery, Node.js, PostgreSQL, React.js, Redux, SQL, Tailwind CSS
   </div>
 
   <div class="exp-header">
     <h2>Professional Experience</h2>
   </div>  
 
+  <div>
+    <h3>Drybar</h3>
+    <h4>Stylist</h4>
+    <h5>Jun 2022 - Dec 2022</h5>
+
+    <ul>
+      <li>Help customers find the rights products for their hair type &amp; goals</li>
+      <li>Cosultations</li>
+      <li>Wash clients hair</li>
+      <li>Give &amp; sell add ons like (scalp massage, hair mask, exfoliating scrub, hydrating treatment)</li>
+      <li>Choose specific products to use based on the clients hair type and hairstyle they selected</li>
+      <li>Blowout the clients hair to hold the style in longer</li>
+      <li>Use a hot tool to make the blowout more defined, last longer</li>
+      <li>Use finishing products to hold everything in with hairspray, texture spray, shine spray</li>
+      <li>Book, change &amp; cancel appointments</li>
+      <li>Take payments</li>
+      <li>Clean and sanitize brushes, clips &amp; other tools</li>
+      <li>Make brush boxes</li>
+      <li>Clean floors, mirrors, stainless steal, wash room</li>
+    </ul>
+  </div>
+  
   <div>
     <h3>Boston Scientific</h3>
     <h4>Packaging &amp; Shipping Department</h4>
