--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
   <div>
     <h3>High School Diploma</h3>
     <h4>Minneapolis Public Schools Online, MN - Completed 2022</h4>
-    <h5>User Experience Design Certification &amp; Full-Stack Software Engineering Certification, Full Stack Development: Human Computer Interaction - Completed 2023&amp; Computer Software Engineering</h5>
+  </div>
+
+  <div>
+    <h3>User Experience Design Certification &amp; Full-Stack Software Engineering Certification, Full Stack Development: Human Computer Interaction &amp; Computer Software Engineering - Completed 2023</h3>
   </div>
 </body>
 </html>
