--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
   <div>
     <h1>Ashlen Goff</h1>
     <p>Motivated, hard working, passion for quality, attentive to detail &amp; continually improving
-    <p>Bootstrap, Git, HTML/CSS, image optimization, Javascript, jQuery, Node.js, PostgreSQL, React.js, Redux, SQL, Tailwind CSS
+    <p>React.js, Redux, Javascript, Node.js, SQL, jQuery, PostgreSQL,Git, HTML, CSS, image optimization, Tailwind CSS, Bootstrap
+  </div>
+
+  <div class="exp-header">
+    <h2>Education</h2>
+  </div>  
+  
+  <div>
+    <h3>High School Diploma</h3>
+    <h4>Minneapolis Public Schools Online, MN - Completed 2022</h4>
+  </div>
+
+  <div>
+    <h3>User Experience Design Certification &amp; Full-Stack Software Engineering Certification, Full Stack Development: Human Computer Interaction &amp; Computer Software Engineering - Completed 2023</h3>
+    <h4>Prime Digital Academy - Completed 2023</h4>
   </div>
 
   <div class="exp-header">
@@ -64,17 +78,5 @@
     </ul>
   </div>
   
-  <div class="exp-header">
-    <h2>Education</h2>
-  </div>  
-  
-  <div>
-    <h3>High School Diploma</h3>
-    <h4>Minneapolis Public Schools Online, MN - Completed 2022</h4>
-  </div>
-
-  <div>
-    <h3>User Experience Design Certification &amp; Full-Stack Software Engineering Certification, Full Stack Development: Human Computer Interaction &amp; Computer Software Engineering - Completed 2023</h3>
-  </div>
 </body>
 </html>
