--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
   <div>
     <h1>Ashlen Goff</h1>
+
+    <div class="exp-header">
+      <h2>Skills</h2>
+    </div>  
+  
     <p>Motivated, hard working, passion for quality, attentive to detail &amp; continually improving
     <p>React.js, Redux, Javascript, Node.js, SQL, jQuery, PostgreSQL,Git, HTML, CSS, image optimization, Tailwind CSS, Bootstrap
   </div>
@@ -18,13 +23,13 @@
   </div>  
   
   <div>
-    <h3>High School Diploma</h3>
-    <h4>Minneapolis Public Schools Online, MN - Completed 2022</h4>
+    <h3>Prime Digital Academy - Completed 2023</h3>
+    <h4>User Experience Design Certification &amp; Full-Stack Software Engineering Certification, Full Stack Development: Human Computer Interaction &amp; Computer Software Engineering - Completed 2023</h4>
   </div>
 
   <div>
-    <h3>User Experience Design Certification &amp; Full-Stack Software Engineering Certification, Full Stack Development: Human Computer Interaction &amp; Computer Software Engineering - Completed 2023</h3>
-    <h4>Prime Digital Academy - Completed 2023</h4>
+    <h3>Minneapolis Public Schools Online, MN - Completed 2022</h3>
+    <h4>High School Diploma</h4>
   </div>
 
   <div class="exp-header">
