--- a/index.html
+++ b/index.html
@@ -23,13 +23,21 @@
   </div>  
   
   <div>
-    <h3>Prime Digital Academy - Completed 2023</h3>
-    <h4>User Experience Design Certification &amp; Full-Stack Software Engineering Certification, Full Stack Development: Human Computer Interaction &amp; Computer Software Engineering - Completed 2023</h4>
+    <h3>Prime Digital Academy</h3>
+    <h4>Completed 2023</h4>
+    <ul>
+      <li>User Experience Design Certification</li>
+      <li>Full-Stack Software Engineering Certification</li> 
+      <li>Full Stack Development: Human Computer Interaction &amp; Computer Software Engineering</li>
+    </ul>
   </div>
 
   <div>
-    <h3>Minneapolis Public Schools Online, MN - Completed 2022</h3>
-    <h4>High School Diploma</h4>
+    <h3>Minneapolis Public Schools Online</h3>
+    <h4>Completed 2022</h4>
+    <ul>
+    <li>High School Diploma</li>
+    </ul>
   </div>
 
   <div class="exp-header">
