--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@
     </div>  
   
     <p>Motivated, hard working, passion for quality, attentive to detail &amp; continually improving
-    <p>React.js, Redux, Javascript, Node.js, SQL, jQuery, PostgreSQL,Git, HTML, CSS, image optimization, Tailwind CSS, Bootstrap
+    <p>React.js, Redux, Javascript, Node.js, SQL, jQuery, PostgreSQL, MUI, Git, HTML, CSS, image optimization, Tailwind CSS, Bootstrap
   </div>
+
+  <div class="exp-header">
+    <h2>Projects</h2>
+  </div>  
+
+  <h3>Wedding Planner</h3>
+  <h4>Wedding Planner is an app to help engaged couples simplify decisions related to wedding planning. It also shows choices they’ve made at the end & how they look together. Users have the option at the end to edit, make changes & delete previous choices.</h4>
+
 
   <div class="exp-header">
     <h2>Education</h2>
@@ -33,7 +41,7 @@
   </div>
 
   <div>
-    <h3>Minneapolis Public Schools Online</h3>
+    <h3>Minneapolis Public Schools</h3>
     <h4>Completed 2022</h4>
     <ul>
     <li>High School Diploma</li>
