--- a/index.html
+++ b/index.html
@@ -22,9 +22,23 @@
     <h2>Projects</h2>
   </div>  
 
-  <h3>Wedding Planner</h3>
-  <h4>Wedding Planner is an app to help engaged couples simplify decisions related to wedding planning. It also shows choices they’ve made at the end & how they look together. Users have the option at the end to edit, make changes & delete previous choices.</h4>
+  <div>
+    <h3>Wedding Planner</h3>
+    <h4>Wedding Planner is an app to help engaged couples simplify decisions related to wedding planning. It also shows choices they’ve made at the end & how they look together. Users have the option at the end to edit, make changes & delete previous choices.</h4>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Node.js</li>
+      <li>Tailwind CSS</li>
+      <li>PostgreSQL</li>
+      <li>React</li>
+      <li>Redux</li>
+      <li>Express</li>
+      <li>Passport</li>
+      <li>Saga</li>
+    </ul>
 
+  </div>  
 
   <div class="exp-header">
     <h2>Education</h2>
