--- a/index.html
+++ b/index.html
@@ -72,19 +72,18 @@
     <h5>Jun 2022 - Dec 2022</h5>
 
     <ul>
-      <li>Help customers find the rights products for their hair type &amp; goals</li>
-      <li>Cosultations</li>
-      <li>Wash clients hair</li>
-      <li>Give &amp; sell add ons like (scalp massage, hair mask, exfoliating scrub, hydrating treatment)</li>
-      <li>Choose specific products to use based on the clients hair type and hairstyle they selected</li>
-      <li>Blowout the clients hair to hold the style in longer</li>
+      <li>Provide exceptional customer service by assisting clients in selecting the appropriate hair products tailored to their hair type and styling goals</li>
+      <li>Conduct thorough consultations with clients to ensure their needs and expectations are met</li>
+      <li>Perform shampooing and conditioning services to cleanse and prepare hair for styling</li>
+      <li>Offer various add-on services such as scalp massages, hair masks, exfoliating scrubs, and hydrating treatments to enhance the client's experience</li>
+      <li>Utilize expertise to select and recommend suitable hair products based on the client's hair type and desired hairstyle</li>
+      <li>Execute blowouts with precision, using hot tools as needed to create defined and long-lasting styles</li>
       <li>Use a hot tool to make the blowout more defined, last longer</li>
-      <li>Use finishing products to hold everything in with hairspray, texture spray, shine spray</li>
-      <li>Book, change &amp; cancel appointments</li>
-      <li>Take payments</li>
-      <li>Clean and sanitize brushes, clips &amp; other tools</li>
-      <li>Make brush boxes</li>
-      <li>Clean floors, mirrors, stainless steal, wash room</li>
+      <li>Apply finishing products such as hairspray, texture spray, and shine spray to lock in the style</li>
+      <li>Manage appointment scheduling, changes, and cancellations in an efficient and organized manner</li>
+      <li>Process client payments with accuracy and professionalism</li>
+      <li>Maintain a clean and sanitized work environment by regularly cleaning and sterilizing brushes, clips, and other tools</li>
+      <li>Create and organize brush boxes to ensure a smooth and efficient workflow</li>
     </ul>
   </div>
   
