--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
   </div>
 
   <div class="exp-header">
-    <h2>Projects</h2>
+    <h2>Apps</h2>
   </div>  
 
   <div>
     <h3>Wedding Planner</h3>
-    <h4>Wedding Planner is an all-in-one mobile application designed to assist engaged couples in streamlining their wedding planning process. The app helps users make informed decisions by presenting a variety of options for different aspects of their wedding. It also provides an overview of their selected choices and how they fit together. Users can easily make changes and delete previous choices if needed, ensuring that their wedding planning experience is stress-free and enjoyable.</h4>
+    <h4>Wedding Planner is an all-in-one application designed to assist engaged couples in streamlining their wedding planning process. The app helps users make informed decisions by presenting a variety of options for different aspects of their wedding. It also provides an overview of their selected choices and how they fit together. Users can easily make changes and delete previous choices if needed, ensuring that their wedding planning experience is stress-free and enjoyable.</h4>
     <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Node.js</li>
-      <li>Tailwind CSS</li>
-      <li>PostgreSQL</li>
       <li>React</li>
       <li>Redux</li>
+      <li>Node.js</li>
       <li>Express</li>
       <li>Passport</li>
       <li>Saga</li>
+      <li>PostgreSQL</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Tailwind CSS</li>
     </ul>
 
   </div>  
