--- a/index.html
+++ b/index.html
@@ -72,18 +72,13 @@
     <h5>Jun 2022 - Dec 2022</h5>
 
     <ul>
-      <li>Provide exceptional customer service by assisting clients in selecting the appropriate hair products tailored to their hair type and styling goals</li>
-      <li>Conduct thorough consultations with clients to ensure their needs and expectations are met</li>
-      <li>Perform shampooing and conditioning services to cleanse and prepare hair for styling</li>
-      <li>Offer various add-on services such as scalp massages, hair masks, exfoliating scrubs, and hydrating treatments to enhance the client's experience</li>
-      <li>Utilize expertise to select and recommend suitable hair products based on the client's hair type and desired hairstyle</li>
-      <li>Execute blowouts with precision, using hot tools as needed to create defined and long-lasting styles</li>
-      <li>Use a hot tool to make the blowout more defined, last longer</li>
-      <li>Apply finishing products such as hairspray, texture spray, and shine spray to lock in the style</li>
-      <li>Manage appointment scheduling, changes, and cancellations in an efficient and organized manner</li>
-      <li>Process client payments with accuracy and professionalism</li>
-      <li>Maintain a clean and sanitized work environment by regularly cleaning and sterilizing brushes, clips, and other tools</li>
-      <li>Create and organize brush boxes to ensure a smooth and efficient workflow</li>
+      <li>Obtained styling certification</li>
+      <li>Achieved consistent top-performance in sales, contributing to the overall success of the salon</li>
+      <li>Provide exceptional customer service by conducting thorough consultations, selecting appropriate hair products, and offering add-on services tailored to clients' needs and goals</li>
+      <li>Perform shampooing, conditioning, and execute precision blowouts with the use of hot tools to create defined and long-lasting styles</li>
+      <li>Apply finishing products to lock in the style and ensure client satisfaction</li>
+      <li>Manage appointments, process payments, and deliver a high level of professionalism throughout the customer experience</li>
+      <li>Maintain a clean and sanitized work environment while organizing tools for an efficient workflow</li>
     </ul>
   </div>
   
