--- a/index.html
+++ b/index.html
@@ -72,13 +72,25 @@
     <h5>Jun 2022 - Dec 2022</h5>
 
     <ul>
-      <li>Obtained styling certification</li>
-      <li>Achieved consistent top-performance in sales, contributing to the overall success of the salon</li>
-      <li>Provide exceptional customer service by conducting thorough consultations, selecting appropriate hair products, and offering add-on services tailored to clients' needs and goals</li>
-      <li>Perform shampooing, conditioning, and execute precision blowouts with the use of hot tools to create defined and long-lasting styles</li>
-      <li>Apply finishing products to lock in the style and ensure client satisfaction</li>
-      <li>Manage appointments, process payments, and deliver a high level of professionalism throughout the customer experience</li>
-      <li>Maintain a clean and sanitized work environment while organizing tools for an efficient workflow</li>
+      <li>
+        Earned styling certification and consistently delivered exceptional 
+        customer service through thorough consultations, product selection, 
+        and personalized add-on services
+      </li>
+      <li>
+        Achieved consistent top-performance in sales, significantly 
+        contributing to the overall success of the salon
+      </li>
+      <li>
+        Mastered shampooing, conditioning, and executing precision blowouts 
+        with hot tools to create long-lasting and defined styles while ensuring 
+        client satisfaction
+      </li>
+      <li>
+        Managed appointments, processed payments, and maintained a clean and 
+        organized work environment, upholding a high level of professionalism 
+        throughout the customer experience
+      </li>
     </ul>
   </div>
   
