updated way more

--- a/index.html
+++ b/index.html
@@ -73,23 +73,22 @@
 
     <ul>
       <li>
-        Earned styling certification and consistently delivered exceptional 
-        customer service through thorough consultations, product selection, 
-        and personalized add-on services
+        Earned styling certification, delivering exceptional customer service 
+        through in-depth consultations, personalized product selection, &amp; 
+        add-on services
       </li>
       <li>
-        Achieved consistent top-performance in sales, significantly 
-        contributing to the overall success of the salon
+        Achieved consistent top-performance in sales, making a significant 
+        impact on salon success
       </li>
       <li>
         Mastered shampooing, conditioning, and executing precision blowouts 
-        with hot tools to create long-lasting and defined styles while ensuring 
-        client satisfaction
+        with hot tools for long-lasting, defined styles that ensure client 
+        satisfaction
       </li>
       <li>
-        Managed appointments, processed payments, and maintained a clean and 
-        organized work environment, upholding a high level of professionalism 
-        throughout the customer experience
+        Managed appointments, payments, and maintained a clean, organized, and 
+        highly professional work environment
       </li>
     </ul>
   </div>
