--- a/index.html
+++ b/index.html
@@ -13,9 +13,28 @@
     <div class="exp-header">
       <h2>Skills</h2>
     </div>  
-  
+
     <p>Motivated, hard working, passion for quality, attentive to detail &amp; continually improving
-    <p>React.js, Redux, Javascript, Node.js, SQL, jQuery, PostgreSQL, MUI, Git, HTML, CSS, image optimization, Tailwind CSS, Bootstrap
+      <ul>
+        <li>React</li>
+        <li>Redux</li>
+        <li>Node.js</li>
+        <li>Javascript</li>
+        <li>jQuery</li>
+        <li>SQL</li>
+        <li>Express</li>
+        <li>Passport</li>
+        <li>Saga</li>  
+        <li>PostgreSQL</li>
+        <li>Git</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Image optimization</li>
+        <li>Material UI (MUI)</li>
+        <li>Tailwind CSS</li>
+        <li>Bootstrap</li>
+      </ul>
+
   </div>
 
   <div class="exp-header">
@@ -23,7 +42,7 @@
   </div>  
 
   <div>
-    <h3>Wedding Planner</h3>
+    <h3>https://wedding-planner-production.up.railway.app/#/registration</h3>
     <h4>Wedding Planner is an all-in-one application designed to assist engaged couples in streamlining their wedding planning process. The app helps users make informed decisions by presenting a variety of options for different aspects of their wedding. It also provides an overview of their selected choices and how they fit together. Users can easily make changes and delete previous choices if needed, ensuring that their wedding planning experience is stress-free and enjoyable.</h4>
     <ul>
       <li>React</li>
