added to apps section

--- a/index.html
+++ b/index.html
@@ -56,8 +56,22 @@
       <li>CSS</li>
       <li>Tailwind CSS</li>
     </ul>
-
   </div>  
+
+<div>
+  <h3>100 Year manifesto</h3>
+  <h4>The Ideal Living Week app revolutionizes intentional living by helping users identify their priorities and design their perfect week. Through a series of intake questions, users will reflect on their values and create a ranked list of priorities. These prioritized categories will then guide users in planning their Ideal Living Week, which can be seamlessly integrated into their overall 100 Year Manifesto.</h4>
+  <ul>
+    <li>React</li>
+    <li>Redux</li>
+    <li>Express</li>
+    <li>Passport</li>
+    <li>Material UI</li>
+    <li>PostgreSQL</li>
+    <li>passport</li>
+    <li>saga</li>
+  </ul>
+</div>
 
   <div class="exp-header">
     <h2>Education</h2>
