--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h2>Skills</h2>
     </div>  
 
-    <p>Motivated, hard working, passion for quality, attentive to detail &amp; continually improving
+    <p>Web Development, Communication, Motivated, hard working, passion for quality, attentive to detail &amp; continually improving
       <ul>
         <li>React</li>
         <li>Redux</li>
