--- a/index.html
+++ b/index.html
@@ -16,23 +16,29 @@
 
     <p>Web Development, Communication, Motivated, hard working, passion for quality, attentive to detail &amp; continually improving
       <ul>
-        <li>React</li>
-        <li>Redux</li>
-        <li>Node.js</li>
-        <li>Javascript</li>
-        <li>jQuery</li>
-        <li>SQL</li>
-        <li>Express</li>
-        <li>Passport</li>
-        <li>Saga</li>  
-        <li>PostgreSQL</li>
-        <li>Git</li>
         <li>HTML</li>
         <li>CSS</li>
-        <li>Image optimization</li>
+        <li>Javascript</li>
+        <li>React</li>
+        <li>NextJS</li>
+        <li>Node.js</li>
+        <li>Express</li>
+        <li>Passport</li>
+        <li>SQL</li>
+        <li>PostgreSQL</li>
+        <li>Redux</li>
+        <li>Saga</li>  
+        <li>jQuery</li>
+        <li>Git</li>
+        <li>Bootstrap</li>
         <li>Material UI (MUI)</li>
         <li>Tailwind CSS</li>
-        <li>Bootstrap</li>
+        <li>Image optimization</li>
+        <li>Generative AI</li>
+        <li>MidJourney</li>
+        <li>Photoshop Generative Fill</li>
+        <li>Magnific.ai</li>
+        <li>Topaz Gigapixel AI</li>
       </ul>
 
   </div>
