--- a/index.html
+++ b/index.html
@@ -1,55 +1,62 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Ashlen Goff Resume</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <div>
     <h1>Ashlen Goff</h1>
 
     <div class="exp-header">
       <h2>Skills</h2>
-    </div>  
+    </div>
 
-    <p>Web Development, Communication, Motivated, hard working, passion for quality, attentive to detail &amp; continually improving
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>Javascript</li>
-        <li>React</li>
-        <li>NextJS</li>
-        <li>Node.js</li>
-        <li>Express</li>
-        <li>Passport</li>
-        <li>SQL</li>
-        <li>PostgreSQL</li>
-        <li>Redux</li>
-        <li>Saga</li>  
-        <li>jQuery</li>
-        <li>Git</li>
-        <li>Bootstrap</li>
-        <li>Material UI (MUI)</li>
-        <li>Tailwind CSS</li>
-        <li>Image optimization</li>
-        <li>Generative AI</li>
-        <li>MidJourney</li>
-        <li>Photoshop Generative Fill</li>
-        <li>Magnific.ai</li>
-        <li>Topaz Gigapixel AI</li>
-      </ul>
+    <p>Web Development, Communication, Motivated, hard working, passion for quality, attentive to detail &amp;
+      continually improving
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Javascript</li>
+      <li>React</li>
+      <li>NextJS</li>
+      <li>Node.js</li>
+      <li>Express</li>
+      <li>SQL</li>
+      <li>Passport</li>
+      <li>PostgreSQL</li>
+      <li>Redux</li>
+      <li>Saga</li>
+      <li>jQuery</li>
+      <li>Git</li>
+      <li>Bootstrap</li>
+      <li>Material UI (MUI)</li>
+      <li>Tailwind CSS</li>
+      <li>Image optimization</li>
+      <li>Generative AI</li>
+      <li>MidJourney</li>
+      <li>Photoshop Generative Fill</li>
+      <li>Magnific.ai</li>
+      <li>Topaz Gigapixel AI</li>
+    </ul>
 
   </div>
 
   <div class="exp-header">
     <h2>Apps</h2>
-  </div>  
+  </div>
 
   <div>
-    <h3>https://wedding-planner-production.up.railway.app/#/registration</h3>
-    <h4>Wedding Planner is an all-in-one application designed to assist engaged couples in streamlining their wedding planning process. The app helps users make informed decisions by presenting a variety of options for different aspects of their wedding. It also provides an overview of their selected choices and how they fit together. Users can easily make changes and delete previous choices if needed, ensuring that their wedding planning experience is stress-free and enjoyable.</h4>
+    <h3><a href="https://xoxoxo.app">xoxoxo.app</a></h3>
+    <h4>Wedding Planner is an all-in-one application designed to assist engaged couples in streamlining their wedding
+      planning process. The app helps users make informed decisions by presenting a variety of options for different
+      aspects of their wedding. It also provides an overview of their selected choices and how they fit together. Users
+      can easily make changes and delete previous choices if needed, ensuring that their wedding planning experience is
+      stress-free and enjoyable.</h4>
     <ul>
       <li>React</li>
       <li>Redux</li>
@@ -62,33 +69,36 @@
       <li>CSS</li>
       <li>Tailwind CSS</li>
     </ul>
-  </div>  
+  </div>
 
-<div>
-  <h3>100 Year manifesto</h3>
-  <h4>The Ideal Living Week app revolutionizes intentional living by helping users identify their priorities and design their perfect week. Through a series of intake questions, users will reflect on their values and create a ranked list of priorities. These prioritized categories will then guide users in planning their Ideal Living Week, which can be seamlessly integrated into their overall 100 Year Manifesto.</h4>
-  <ul>
-    <li>React</li>
-    <li>Redux</li>
-    <li>Express</li>
-    <li>Passport</li>
-    <li>Material UI</li>
-    <li>PostgreSQL</li>
-    <li>passport</li>
-    <li>saga</li>
-  </ul>
-</div>
+  <div>
+    <h3>100 Year manifesto</h3>
+    <h4>The Ideal Living Week app revolutionizes intentional living by helping users identify their priorities and
+      design their perfect week. Through a series of intake questions, users will reflect on their values and create a
+      ranked list of priorities. These prioritized categories will then guide users in planning their Ideal Living Week,
+      which can be seamlessly integrated into their overall 100 Year Manifesto.</h4>
+    <ul>
+      <li>React</li>
+      <li>Redux</li>
+      <li>Express</li>
+      <li>Passport</li>
+      <li>Material UI</li>
+      <li>PostgreSQL</li>
+      <li>passport</li>
+      <li>saga</li>
+    </ul>
+  </div>
 
   <div class="exp-header">
     <h2>Education</h2>
-  </div>  
-  
+  </div>
+
   <div>
     <h3>Prime Digital Academy</h3>
     <h4>Completed 2023</h4>
     <ul>
       <li>User Experience Design Certification</li>
-      <li>Full-Stack Software Engineering Certification</li> 
+      <li>Full-Stack Software Engineering Certification</li>
       <li>Full Stack Development: Human Computer Interaction &amp; Computer Software Engineering</li>
     </ul>
   </div>
@@ -97,13 +107,13 @@
     <h3>Minneapolis Public Schools</h3>
     <h4>Completed 2022</h4>
     <ul>
-    <li>High School Diploma</li>
+      <li>High School Diploma</li>
     </ul>
   </div>
 
   <div class="exp-header">
     <h2>Professional Experience</h2>
-  </div>  
+  </div>
 
   <div>
     <h3>Drybar</h3>
@@ -112,26 +122,26 @@
 
     <ul>
       <li>
-        Earned styling certification, delivering exceptional customer service 
-        through in-depth consultations, personalized product selection, &amp; 
+        Earned styling certification, delivering exceptional customer service
+        through in-depth consultations, personalized product selection, &amp;
         add-on services
       </li>
       <li>
-        Achieved consistent top-performance in sales, making a significant 
+        Achieved consistent top-performance in sales, making a significant
         impact on salon success
       </li>
       <li>
-        Mastered shampooing, conditioning, and executing precision blowouts 
-        with hot tools for long-lasting, defined styles that ensure client 
+        Mastered shampooing, conditioning, and executing precision blowouts
+        with hot tools for long-lasting, defined styles that ensure client
         satisfaction
       </li>
       <li>
-        Managed appointments, payments, and maintained a clean, organized, and 
+        Managed appointments, payments, and maintained a clean, organized, and
         highly professional work environment
       </li>
     </ul>
   </div>
-  
+
   <div>
     <h3>Boston Scientific</h3>
     <h4>Packaging &amp; Shipping Department</h4>
@@ -143,7 +153,7 @@
       <li>Consistently exceeded performance goals</li>
     </ul>
   </div>
-  
+
   <div>
     <h3>Caribou Coffee</h3>
     <h4>Shift Lead</h4>
@@ -156,6 +166,7 @@
       <li>Counted out tills, divided tips &amp; prepped bank deposits</li>
     </ul>
   </div>
-  
+
 </body>
+
 </html>
