added technologies used in xoxoxo

--- a/index.html
+++ b/index.html
@@ -51,14 +51,21 @@
   </div>
 
   <div>
-    <h3><a href="https://xoxoxo.app">xoxoxo.app</a></h3>
+    <h3><a href="https://xoxoxo.app" target="_blank" rel="noopener noreferrer">xoxoxo.app</a></h3>
     <h4>Wedding Planner is an all-in-one application designed to assist engaged couples in streamlining their wedding
       planning process. The app helps users make informed decisions by presenting a variety of options for different
       aspects of their wedding. It also provides an overview of their selected choices and how they fit together. Users
       can easily make changes and delete previous choices if needed, ensuring that their wedding planning experience is
       stress-free and enjoyable.</h4>
     <ul>
+      <li>NextJS</li>
       <li>React</li>
+      <li>Image optimization</li>
+      <li>Generative AI</li>
+      <li>MidJourney</li>
+      <li>Photoshop Generative Fill</li>
+      <li>Magnific.ai</li>
+      <li>Topaz Gigapixel AI</li>
       <li>Redux</li>
       <li>Node.js</li>
       <li>Express</li>
