--- a/index.html
+++ b/index.html
@@ -52,22 +52,16 @@
 
   <div>
     <h3><a href="https://xoxoxo.app" target="_blank" rel="noopener noreferrer">xoxoxo.app</a></h3>
-    <h4>Wedding Planner is an all-in-one application designed to assist engaged couples in streamlining their wedding
-      planning process. The app helps users make informed decisions by presenting a variety of options for different
-      aspects of their wedding. It also provides an overview of their selected choices and how they fit together. Users
-      can easily make changes and delete previous choices if needed, ensuring that their wedding planning experience is
-      stress-free and enjoyable.</h4>
+    <h4>XOXOXO is a visual wedding planning responsive web app with social media sharing features. Built with NextJS &
+      React Server Components (RSCs), the app achieves a perfect 100 Lighthouse score for performance, accessibility &
+      SEO. Styled with Tailwind, CSS for the entire app is only 5.7 kB. Images created with generative AI using
+      MidJourney, Photoshop Generative Fill, Magnific.ai & Topaz GigaPixel AI. Implemented with:</h4>
     <ul>
       <li>NextJS</li>
       <li>React</li>
-      <li>Image optimization</li>
-      <li>Generative AI</li>
-      <li>MidJourney</li>
-      <li>Photoshop Generative Fill</li>
-      <li>Magnific.ai</li>
-      <li>Topaz Gigapixel AI</li>
       <li>Redux</li>
       <li>Node.js</li>
+      <li>Javascript</li>
       <li>Express</li>
       <li>Passport</li>
       <li>Saga</li>
